--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,13 +6,7 @@
 
     <string name="fragment_home">Home</string>
     <string name="fragment_shop">Shop</string>
-    <string name="fragment_about">About</string>
-
-    <string name="number1">I</string>
-    <string name="number2">II</string>
-    <string name="number3">III</string>
-
-    <string name="fragment">Fragment</string>
+    <string name="fragment_settings">Settings</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
